# VulkanSC-ValidationLayers

./: .gitattributes  .gitignore  .travis.yml  BUILD.gn  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build_linux.yml  build_windows.yml  ci_build.yml  formatting.yml  vvl.yml  vvl_sc.yml
build-android/jni/: Android.mk
build-gn/: generate_vulkan_layers_json.py  update_deps.sh
docs/: generated_code.md  shader_validation.md  synchronization.md
layers/: CMakeLists.txt  VkSCLayer_khronos_validation.def  VkSCLayer_khronos_validation.json.in  base_node.cpp  base_node.h  best_practices.cpp  best_practices_error_enums.h  best_practices_utils.cpp  best_practices_validation.h  buffer_validation.cpp  cmd_buffer_state.cpp  cmd_buffer_state.h  convert_to_renderpass2.cpp  core_error_location.h  core_validation.cpp  core_validation.h  core_validation_types.h  debug_printf.cpp  debug_printf.h  descriptor_sets.cpp  descriptor_sets.h  device_memory_state.h  device_state.h  drawdispatch.cpp  gpu_utils.cpp  gpu_utils.h  gpu_validation.cpp  gpu_validation.h  gpu_vuids.h  hash_vk_types.h  image_layout_map.h  image_state.cpp  image_state.h  layer_options.cpp  layer_options.h  object_lifetime_validation.h  object_tracker_utils.cpp  parameter_validation_utils.cpp  pipeline_state.cpp  pipeline_state.h  (+31 more)
layers/best_practices/: best_practices_utils.cpp  best_practices_validation.h  bp_wsi.cpp
layers/chassis/: layer_chassis_dispatch_manual.cpp
layers/core_checks/: cc_device.cpp  cc_drawdispatch.cpp  cc_pipeline.cpp  cc_pipeline_graphics.cpp  cc_pipeline_ray_tracing.cpp  cc_render_pass.cpp  cc_shader_object.cpp  cc_spirv.cpp  core_validation.h  shader_validation.cpp
scripts/: CMakeLists.txt  best_practices_generator.py  check_code_format.py  check_commit_message_format.sh  command_validation_generator.py  common_ci.py  common_codegen.py  dispatch_table_helper_generator.py  external_revision_generator.py  format_utils_generator.py  generate_source.py  generate_spirv.py  github_ci_build_desktop.py  github_ci_win_linux.py  helper_file_generator.py  known_good.json  layer_chassis_dispatch_generator.py  layer_chassis_generator.py  layer_dispatch_table_generator.py  lvl_genvk.py  lvt_file_generator.py  object_tracker_generator.py  parameter_validation_generator.py  parse_test_results.py  spirv_grammar_generator.py  spirv_validation_generator.py  sync_val_gen.py  tests_vksc.py  thread_safety_generator.py  update_deps.py  vk_validation_stats.py  vksc_convert_tests.json  vksc_convert_tests.py  vksc_github_ci.py
tests/: CMakeLists.txt  layer_validation_tests.cpp  layer_validation_tests.h  test_common.h  vklayertests_buffer_image_memory_sampler.cpp  vklayertests_command.cpp  vklayertests_instanceless.cpp  vkpositivelayertests.cpp  vkrenderframework.cpp  vkrenderframework.h  vksyncvaltests.cpp  vktestbinding.cpp  vktestbinding.h  vktestframework.cpp
tests/vulkansc/: CMakeLists.txt  convertedTests.cmake
tests/vulkansc/converted/: amd_best_practices.cpp  android_external_resolve.cpp  android_external_resolve_positive.cpp  android_hardware_buffer.cpp  android_hardware_buffer_positive.cpp  arm_best_practices.cpp  atomics.cpp  atomics_positive.cpp  best_practices.cpp  best_practices_positive.cpp  buffer.cpp  buffer_positive.cpp  command.cpp  command_positive.cpp  cooperative_vector.cpp  cooperative_vector_positive.cpp  copy_buffer_image.cpp  copy_buffer_image_positive.cpp  debug_extensions.cpp  debug_extensions_positive.cpp  debug_printf.cpp  debug_printf_ray_tracing.cpp  debug_printf_shader_debug_info.cpp  descriptor_buffer.cpp  descriptor_buffer_positive.cpp  descriptor_indexing.cpp  descriptor_indexing_positive.cpp  descriptors.cpp  descriptors_positive.cpp  device_feature_property.cpp  device_feature_property_positive.cpp  device_generated_commands.cpp  device_generated_commands_positive.cpp  device_queue.cpp  dynamic_rendering.cpp  dynamic_rendering_local_read.cpp  dynamic_rendering_local_read_positive.cpp  dynamic_rendering_positive.cpp  dynamic_state.cpp  dynamic_state_positive.cpp  (+181 more)
tests/vulkansc/converted/negative/: amd_best_practices.cpp  android_hardware_buffer.cpp  arm_best_practices.cpp  best_practices.cpp  buffer.cpp  command.cpp  debug_printf.cpp  descriptor_renderpass_framebuffer.cpp  dynamic_rendering.cpp  external_memory_sync.cpp  gpu_av.cpp  graphics_library.cpp  image.cpp  imageless_framebuffer.cpp  instanceless.cpp  memory.cpp  nvidia_best_practices.cpp  object_lifetime.cpp  others.cpp  pipeline_shader.cpp  portability_subset.cpp  query.cpp  ray_tracing.cpp  ray_tracing_gpu.cpp  ray_tracing_pipeline.cpp  sampler.cpp  sparse.cpp  sync_object.cpp  sync_val.cpp  video.cpp  viewport_inheritance.cpp  wsi.cpp  ycbcr.cpp
tests/vulkansc/converted/positive/: android_hardware_buffer.cpp  best_practices.cpp  command.cpp  descriptors.cpp  dynamic_rendering.cpp  gpu_av.cpp  graphics_library.cpp  image_buffer.cpp  instance.cpp  memory.cpp  other.cpp  pipeline.cpp  ray_tracing.cpp  ray_tracing_pipeline.cpp  render_pass.cpp  shaderval.cpp  sync.cpp  tooling.cpp  video.cpp  wsi.cpp
tests/vulkansc/device_profiles/: max_core.json  max_profile.json  min_core.json
tests/vulkansc/framework/: custom_test_framework.h  vksc_compatible_layer_validation_tests.cpp  vksc_compatible_layer_validation_tests.h  vksc_layer_validation_tests.cpp  vksc_layer_validation_tests.h  vksc_pipeline_templates.h  vksc_render_framework.cpp  vksc_render_framework.h  vksc_shader_templates.h  vksc_test_dispatch_helper.cpp  vksc_test_dispatch_helper.h  vksc_test_environment.cpp  vksc_test_environment.h  vksc_test_framework.cpp  vksc_test_pipeline_cache_helper.cpp  vksc_test_pipeline_cache_helper.h  vksc_test_pipeline_helper.cpp  vksc_test_pipeline_helper.h
tests/vulkansc/negative/: command.cpp  device_create.cpp  implicit.cpp  object_reservation.cpp  others.cpp  pipeline.cpp  pipeline_cache_data.cpp  ported.cpp  render_pass.cpp  shader_spirv.cpp  wsi.cpp
tests/vulkansc/positive/: device_create.cpp  implicit.cpp  instance.cpp  others.cpp  pipeline.cpp  pipeline_cache_data.cpp  shader_spirv.cpp
(+134 files in other folders)
